# superchat-website

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
live/: Smash or Pass： Valentine's Special✨.donations.json
migrations/2023-06-02-081556_create_users/: down.sql  up.sql
migrations/2023-06-02-103354_create_session_tokens/: down.sql  up.sql
migrations/2023-06-02-124731_create_video_donation_status/: down.sql  up.sql
migrations/2023-06-11-022127_add_log/: down.sql  up.sql
migrations/2023-06-21-193750_separate-read-status/: up.sql
migrations/2023-06-21-193750_separate_read_status/: down.sql
migrations/2023-06-21-202330_logs_for_that/: down.sql  up.sql
scripts/: donation-extract.sh  donation-move.sh  download-info.sh  download-live-info.sh  watch-live.sh
src/: main.rs  models.rs  schema.rs
static/: tailwind.css
templates/: donation.html  donations.html  donationsnotfound.html  index.html  login.html  streamers.html  streams.html
