[package]
name = "superchat-extractor-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
askama = { version = "0.12.0", features = ["with-actix-web"] }
askama_actix = "0.14.0"
glob = "0.3.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
minify-html = "0.11.1"
